modified resume styling to work with bio

--- a/resume.css
+++ b/resume.css
@@ -8,7 +8,7 @@ h1 {
 	text-align: center;
 }
 
-h1, h3, h4, p {
+h1, h2, h3, h4, p {
 	font-family: "Helvetica";
 	color: #667292;
 	margin-right: 50px;
@@ -46,6 +46,14 @@ body {
 
 #educationBody, #experienceBody, #skillsBody, #leadershipBody {
 	margin-bottom: 50px;
+}
+
+#selfie {
+ 	display: block;
+ 	text-align: center;
+ 	height: 500px;
+ 	margin-left: auto; 
+ 	margin-right: auto;
 }
 
 
