--- a/index.css
+++ b/index.css
@@ -4,13 +4,12 @@
  * Assignment 1
  **********************/
  body {
- 	background-color: #8d9db6;
+ 	background-color: #f1e3dd;
  }
 
  h2 {
- 	margin: 15px 400px;
+ 	margin: 15px;
  	text-align: center;
- 	background-color: #f1e3dd;
  	font-family: "Courier New";
  	padding: 20px;
  	color: #667292;
@@ -25,15 +24,28 @@
  	margin: -50px 100px;
  	font-size: 20px;
  	color: #667292;
- 	background-color: #f1e3dd;
+ 	background-color: #8d9db6;
  	border: solid;
  	border-width: 5px;
  	border-color: #667292;
  }
 
  p:hover {
- 	background-color: #8d9db6;
+ 	background-color: #f1e3dd;
  }
+
+.verticalStrip {
+	position: fixed; 
+	top: 0; 
+	left: 0; 
+	width: 200px; 
+	background-color: #667292; 
+	height: 100%;
+}
+
+.content { 
+	padding-left: 250px;
+}
 
  #selfie {
  	display: block;
