--- a/index.css
+++ b/index.css
@@ -7,69 +7,60 @@
  	background-color: #f1e3dd;
  }
 
- h2 {
- 	margin: 15px;
+h2 {
+ 	font-family: "Merriweather", sans-serif;
  	text-align: center;
- 	font-family: "Courier New";
- 	padding: 20px;
- 	color: #667292;
- 	border: solid;
- 	border-width: 5px;
- 	border-color: #667292;
  }
 
  p {
- 	font-family: "Courier New";
- 	padding: 50px;
- 	margin: -50px 100px;
- 	font-size: 20px;
- 	color: #667292;
- 	background-color: #8d9db6;
- 	border: solid;
- 	border-width: 5px;
- 	border-color: #667292;
- }
-
- p:hover {
- 	background-color: #f1e3dd;
- }
-
-.verticalStrip {
-	position: fixed; 
-	top: 0; 
-	left: 0; 
-	width: 200px; 
-	background-color: #667292; 
-	height: 100%;
-}
-
-.content { 
-	padding-left: 250px;
-}
-
- #selfie {
- 	display: block;
  	text-align: center;
- 	height: 450px;
- 	margin-left: auto; 
- 	margin-right: auto;
  }
 
-#left {
-	text-align: center;
-	width: 50%;
-	float: left;
-	padding-top: 100px;
-	padding-bottom: 100px; 
+ button {
+ 	margin-left: auto;
+  	margin-right: auto;
+  	background-color: #4CAF50; /* Green */
+  	border: none;
+  	color: white;
+  	padding: 15px 32px;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 16px;
+ }
+
+/* Nav Bar */
+ul {
+	font-family: "Merriweather", sans-serif;
+    color: black;
+    font-weight: 200;
+    letter-spacing: 3px;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+    text-align:center;
+    background-color: white;
 }
 
-#right {
-	text-align: center;
-	margin-left: 50%;
-	padding-top: 100px;
-	padding-bottom: 100px; 
+li {
+	display: inline;
 }
 
-.clear {
-	clear: both;
+li a {
+	display: inline-block;
+	color: black;
+	text-decoration: none;
+	padding: 40px;
+}
+
+li a:hover {
+	color: #9FD8D8;
+}
+/* Nav Bar */
+
+#pic {
+	display: block;
+	margin-left: auto;
+  	margin-right: auto;
+  	width: 75%;
 }
